--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -18,6 +18,9 @@ jobs:
         uses: actions/checkout@v3
       - name: Set up pip
         run: apt update && apt install -y python3-pip
+      - name: Install dependencies
+        run: |
+          apt update && apt install -y ros-humble-launch-ros
       - name: Build
         run: |
           python3 setup.py sdist
