--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -18,14 +18,12 @@ jobs:
         uses: actions/checkout@v3
       - name: Set up pip
         run: apt update && apt install -y python3-pip
-      - name: Install dependencies
-        run: |
-          apt update && apt install -y ros-humble-launch-ros
       - name: Build
         run: |
           python3 setup.py sdist
       - name: Install
         run: |
+          PYTHONPATH=/opt/ros/humble/lib/python3.10/site-packages:/opt/ros/humble/local/lib/python3.10/dist-packages:$PYTHONPATH
           pip3 install .
       - name: Publish to PyPI
         if: startsWith(github.event.ref, 'refs/tags') || github.event_name == 'release'
