--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,7 +5,7 @@ description = "Simple launch file generator for ROS2."
 authors = [
     { name = "Tatsuro Sakaguchi", email = "tatsuro.sakaguchi@g.softbank.co.jp" },
 ]
-dependencies = ["launch", "launch_ros"]
+dependencies = ["launch", "launch_ros", "pyyaml"]
 readme = "README.md"
 requires-python = ">= 3.10"
 
